--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
       E-Mail: <a href="mailto:info@informatikinsider.de">info@informatikinsider.de</a>
     </p>
 
+    <h2>Wichtige Info:</h2>
+    <p>
+      Päckchen oder Pakete werden nicht angenommen!
+    </p>
+    
     <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
     <p>
       Ismar Halilcevic<br>
