--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <h2>Haftung für Links</h2>
     <p>
-      Unser Webpräsenz kann Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. 
+      Unsere Webpräsenz kann Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. 
       Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen.
     </p>
 
