--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
     <h2>Haftung für Links</h2>
     <p>
-      Unsere Webpräsenz kann Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. 
-      Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen.
+      Die InformatikInsider-Webpräsenz kann Links zu externen Webseiten Dritter enthalten, auf deren Inhalte keinen Einfluss besteht. 
+      Deshalb kann für diese fremden Inhalte auch keine Gewähr übernommen werden.
     </p>
 
     <h2>Urheberrecht</h2>
