--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   <div class="container">
     <h1>Impressum</h1>
 
-    <p><strong>Angaben gemäß § 5 TMG:</strong></p>
+    <h2><strong>Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</strong><h2>
     <p>
       Ismar Halilcevic<br>
+      c/o Postflex #3048 <br>
       Emsdettener Str. 10<br>
       48268 Greven<br>
-      Postflex-ID: #3048 <br>
       Deutschland
     </p>
 
@@ -56,34 +56,24 @@
     <p>
       Päckchen oder Pakete werden nicht angenommen!
     </p>
-    
-    <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
+
+    <h2>Haftungsausschluss (Disclaimer)</h2>
+
+    <h3>Haftung für Inhalte</h3>
     <p>
-      Ismar Halilcevic<br>
-      Emsdettener Str. 10<br>
-      48268 Greven<br>
-      Postflex-ID: #3048 <br>
-      Deutschland
+      Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
     </p>
 
-    <h2>Haftung für Inhalte</h2>
+    <h3>Haftung für Links</h3>
     <p>
-      Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. 
-      Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen 
-      zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
+      Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
     </p>
 
-    <h2>Haftung für Links</h2>
+    <h3>Urheberrecht</h3>
     <p>
-      Die InformatikInsider-Webpräsenz kann Links zu externen Webseiten Dritter enthalten, auf deren Inhalte keinen Einfluss besteht. 
-      Deshalb kann für diese fremden Inhalte auch keine Gewähr übernommen werden.
+      Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
     </p>
-
-    <h2>Urheberrecht</h2>
-    <p>
-      Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. 
-      Beiträge Dritter sind als solche gekennzeichnet.
-    </p>
+    <p>Quelle: <em><a href="http://www.e-recht24.de/impressum-generator.html" title="Impressum Generator">http://www.e-recht24.de</a></em></p>
   </div>
 </body>
 </html>
