--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   <div class="container">
     <h1>Impressum</h1>
 
-    <h2><strong>Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</strong><h2>
+    <h2>Angaben gemäß § 5 TMG sowie verantwortlich für den Inhalt nach § 55 Abs. 2 RStV<h2>
+      
     <p>
       Ismar Halilcevic<br>
       c/o Postflex #3048 <br>
